--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dnspython==2.7.0
 eventlet==0.39.0
 Flask==3.1.0
 Flask-SocketIO==5.5.1
+Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
 gunicorn==23.0.0
 h11==0.14.0
@@ -16,6 +17,8 @@ packaging==24.2
 python-engineio==4.11.2
 python-socketio==5.12.1
 simple-websocket==1.1.0
+SQLAlchemy==2.0.38
+typing_extensions==4.12.2
 Werkzeug==3.1.3
 wsproto==1.2.0
 zipp==3.21.0
